<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/center_wall"
    tools:context="com.project.mihai.aichatproject.gui.login.view.LoginActivity">


    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/login_title"
        android:textColor="@color/white_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_login_title_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login_title"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/login_title_min"
        android:textAllCaps="false"
        android:textColor="@color/white_gray"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shadow_rectangle"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/login_auth_text"
                android:textColor="@color/center_wall"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/iv_button_add"
                android:layout_width="@dimen/add_button_size"
                android:layout_height="@dimen/add_button_size"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:src="@drawable/add_button" />

        </RelativeLayout>

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/login_user_hint"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/smooth_black"
            android:textColorHint="@color/rust_gray" />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/smooth_black"
            android:textColorHint="@color/rust_gray" />

        <TextView
            android:id="@+id/tv_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_press_selector"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_signin_button"
            android:textColor="@color/text_press_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/rust_gray"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bottom_floor" />


</RelativeLayout>
